2000-10-03  Von Welch  <vwelch@ncsa.uiuc.edu>

	* ChangeLog: Created after 0.2alpha1 release
